--- a/src/Row.css
+++ b/src/Row.css
@@ -1,24 +1,26 @@
 .row{
-    margin: 2vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    color: white;
 }
 .row_img{
     object-fit: contain;
     width: 100%;
-    max-width: 10vw;
+    max-width: 17vw;
     margin-right: 1vw;
-    transition: all 0.5s ease-in-out;
+    transition: all 450ms ease-in-out;
 }
 .rowitems{
     display: flex;
     overflow-y:hidden; 
     overflow-x: scroll;
-    padding:2vmin;
+    padding:1vmin;
 }
 .rowitems::-webkit-scrollbar{
     display: none;
 }
 .row_img:hover{
-    transform: scale(1.07);
+    transform: scale(1.09);
     cursor: pointer;
 }
 .row_imglarge{
